--- a/other/index.css
+++ b/other/index.css
@@ -3,10 +3,15 @@
   margin: 0;
 }
 
-
-
 body {
-  background: linear-gradient(to right, black, rgb(6, 6, 182), black,rgb(6, 6, 182), black);;
+  background: linear-gradient(
+    to right,
+    black,
+    rgb(6, 6, 182),
+    black,
+    rgb(6, 6, 182),
+    black
+  );
 }
 
 .header {
@@ -16,11 +21,9 @@ body {
   display: flex;
   flex-wrap: wrap;
   flex-direction: row;
-  
-
 }
 .header img {
-  height: 15vh;  
+  height: 15vh;
   padding: 2.5vh;
   border-radius: 1vh;
 }
@@ -29,9 +32,6 @@ h1 {
   font-size: 40px;
   color: rgb(252, 251, 250);
 }
-
-
-
 
 .episode {
   display: flex;
@@ -83,5 +83,3 @@ h1 {
   margin-top: 10px;
   color: white;
 }
-
-
