--- a/css/style.css
+++ b/css/style.css
@@ -4,14 +4,7 @@
 }
 
 body {
-  background: linear-gradient(
-    to right,
-    black,
-    rgb(6, 6, 182),
-    black,
-    rgb(6, 6, 182),
-    black
-  );
+  background-color: rgb(150, 150, 150);
 }
 
 .header {
@@ -19,16 +12,17 @@ body {
   width: 100vw;
   height: 20vh;
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
   flex-direction: row;
 }
+
 .header img {
   height: 15vh;
   padding: 2.5vh;
   border-radius: 1vh;
 }
+
 h1 {
-  padding-top: 50px;
   font-size: 40px;
   color: rgb(252, 251, 250);
 }
@@ -41,7 +35,7 @@ h1 {
   width: 50vw;
   background-color: rgb(50, 50, 50);
   border-radius: 15px;
-  z-index: 2;
+  padding: 10px;
 }
 
 .episode_left {
@@ -49,18 +43,22 @@ h1 {
   flex-wrap: wrap;
   flex-direction: column;
   float: left;
-  margin: 10px;
+  max-width: 50vw;
+  margin: auto;
 }
 
 .episode_left img {
+  max-width: 50vw;
+  max-height: 50vw;
   width: 300px;
   border-radius: 15px;
 }
 
 .episode_left audio {
   height: 50px;
-  margin: 10px 10px 10px 0px;
+  margin: 10px 10px 0px 0px;
   width: 300px;
+  max-width: 50vw;
   border-radius: 5px;
   font-weight: 700;
   font-size: 15px;
